--- a/eazeWork/src/main/res/layout/add_expense_fragment.xml
+++ b/eazeWork/src/main/res/layout/add_expense_fragment.xml
@@ -55,14 +55,14 @@
                             android:weightSum="1">
 
                             <TextView
-                                android:layout_marginTop="@dimen/margin_7"
+                                android:id="@+id/textView3"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/margin_7"
                                 android:layout_weight="0.3"
                                 android:padding="5dp"
                                 android:text="Category"
-                                android:textColor="@color/black"
-                                android:id="@+id/textView3" />
+                                android:textColor="@color/black" />
 
                             <FrameLayout
                                 android:layout_width="0dp"
