--- a/eazeWork/src/main/res/layout/header_layout.xml
+++ b/eazeWork/src/main/res/layout/header_layout.xml
@@ -62,7 +62,8 @@
             <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".2">
+                android:layout_weight=".2"
+                android:id="@+id/rightRL">
 
                 <ImageView
                     android:id="@+id/ibRight"
