--- a/eazeWork/src/main/res/layout/attendance_details_layout.xml
+++ b/eazeWork/src/main/res/layout/attendance_details_layout.xml
@@ -10,7 +10,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_10"
+        android:layout_marginLeft="@dimen/margin_13"
+        android:layout_marginRight="@dimen/margin_13"
+        android:layout_marginBottom="@dimen/margin_13"
         android:background="@color/white"
         android:orientation="vertical"
         >
@@ -21,7 +23,7 @@
             android:orientation="horizontal"
             android:padding="@dimen/margin_5"
             android:id="@+id/statusLinearLayout"
-            android:visibility="gone"
+            android:visibility="visible"
             >
 
             <TextView
@@ -42,7 +44,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_margin="@dimen/margin_10">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -411,6 +414,14 @@
         <include
             android:id="@+id/remarksLinearLayout"
             layout="@layout/remarks_edittext_layout"></include>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_13"
+        android:layout_marginRight="@dimen/margin_13">
+        <include layout="@layout/remarks_layout"></include>
     </LinearLayout>
 
     <include layout="@layout/action_button_layout" android:id="@+id/buttonLinearLayout"></include>
