--- a/eazeWork/src/main/res/layout/fragment_tour_request.xml
+++ b/eazeWork/src/main/res/layout/fragment_tour_request.xml
@@ -14,8 +14,8 @@
 
     <ProgressBar
         android:id="@+id/progress_bar"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/margin_40"
+        android:layout_height="@dimen/margin_40"
         android:layout_centerInParent="true"
         android:visibility="gone" />
 
@@ -27,14 +27,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_10"
+        android:layout_margin="@dimen/margin_13"
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/cardViewExpense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
+            android:paddingBottom="@dimen/margin_10"
             card_view:cardCornerRadius="2dp"
             card_view:cardElevation="2dp"
             card_view:cardUseCompatPadding="true">
@@ -43,6 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
+                android:padding="@dimen/margin_5"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -54,7 +55,7 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="@dimen/margin_10"
                         android:layout_weight="0.8">
 
                         <LinearLayout
@@ -79,9 +80,7 @@
                                 android:background="@drawable/grey_commoborder"
                                 android:gravity="left"
                                 android:padding="@dimen/margin_10"
-                                android:text="aaa"
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/margin_14" />
+                                style="@style/editTextView" />
                         </LinearLayout>
 
                     </LinearLayout>
@@ -295,10 +294,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.65"
-                        android:maxLength="5"
                         android:paddingStart="@dimen/margin_10"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/font_14" />
+                        style="@style/editTextView" />
 
                 </LinearLayout>
 
@@ -324,10 +321,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.65"
-                        android:maxLength="5"
                         android:paddingStart="@dimen/margin_10"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/font_14" />
+                        style="@style/editTextView" />
 
                 </LinearLayout>
 
@@ -367,13 +362,12 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:background="@color/transparent"
-                            android:paddingBottom="18dp"
+                            android:paddingBottom="@dimen/margin_21"
                             android:paddingEnd="@dimen/margin_10"
                             android:paddingStart="@dimen/margin_10"
                             android:paddingTop="@dimen/margin_10"
                             android:text="Select Reason"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/font_14" />
+                            style="@style/editTextView" />
                     </FrameLayout>
 
                 </LinearLayout>
@@ -405,6 +399,135 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="0.65"
                         android:paddingStart="@dimen/margin_10"
+                        style="@style/editTextView" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
+
+                    <TextView
+                        style="@style/textView"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.35"
+                        android:padding="@dimen/margin_7"
+                        android:text="@string/accommodation_needed" />
+
+
+                  <RadioGroup
+                      android:layout_width="0dp"
+                      android:layout_height="wrap_content"
+                      android:layout_weight="0.65"
+                      android:id="@+id/accommodationRG"
+                      android:orientation="horizontal">
+
+                      <RadioButton
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:id="@+id/yesRB"
+                          android:layout_marginRight="@dimen/margin_20"
+                          android:layout_marginLeft="@dimen/margin_10"
+                          android:padding="@dimen/margin_10"
+                          android:text="@string/yes"
+                          android:checked="true"/>
+
+                      <RadioButton
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:padding="@dimen/margin_10"
+                          android:id="@+id/noRB"
+                          android:text="@string/no"
+                          android:enabled="true"/>
+                  </RadioGroup>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_10"
+                    android:orientation="horizontal"
+                    android:id="@+id/accommodationLl"
+                    >
+
+                    <EditText
+                        android:id="@+id/accommodationET"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/margin_70"
+                        android:background="@drawable/focus_style_gray"
+                        android:ems="10"
+                        android:maxLength="50"
+                        android:hint="@string/accommodation_details"
+                        android:padding="@dimen/margin_10"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/font_14" />
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
+
+                    <TextView
+                        style="@style/textView"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.35"
+                        android:padding="@dimen/margin_7"
+                        android:text="@string/tickets_needed" />
+
+
+                    <RadioGroup
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.65"
+                        android:id="@+id/ticketsRG"
+                        android:orientation="horizontal">
+
+                        <RadioButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/yesTicketRB"
+                            android:layout_marginRight="@dimen/margin_20"
+                            android:layout_marginLeft="@dimen/margin_10"
+                            android:padding="@dimen/margin_10"
+                            android:text="@string/yes"
+                            android:checked="true"/>
+
+                        <RadioButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/margin_10"
+                            android:id="@+id/noTicketRB"
+                            android:text="@string/no"
+                            android:enabled="true"/>
+                    </RadioGroup>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_10"
+                    android:orientation="horizontal"
+                    android:id="@+id/ticketsLl"
+                    >
+
+                    <EditText
+                        android:id="@+id/ticketsET"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/margin_70"
+                        android:background="@drawable/focus_style_gray"
+                        android:ems="10"
+                        android:maxLength="50"
+                        android:hint="@string/ticket_details"
+                        android:padding="@dimen/margin_10"
                         android:textColor="@color/black"
                         android:textSize="@dimen/font_14" />
 
@@ -434,8 +557,7 @@
                         android:layout_weight="0.65"
                         android:maxLength="5"
                         android:paddingStart="@dimen/margin_10"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/font_14" />
+                        style="@style/editTextView" />
 
                 </LinearLayout>
 
@@ -464,8 +586,7 @@
                         android:inputType="number"
                         android:maxLength="7"
                         android:paddingStart="@dimen/margin_10"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/font_14" />
+                        style="@style/editTextView" />
 
                 </LinearLayout>
 
@@ -487,7 +608,34 @@
                         android:text="@string/students_special" />
 
 
-                    <FrameLayout
+                    <RadioGroup
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.65"
+                        android:id="@+id/studentRG"
+                        android:orientation="horizontal">
+
+                        <RadioButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/yesStudentRB"
+                            android:layout_marginRight="@dimen/margin_20"
+                            android:layout_marginLeft="@dimen/margin_10"
+                            android:padding="@dimen/margin_10"
+                            android:text="@string/yes"
+                            android:checked="true"/>
+
+                        <RadioButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/margin_10"
+                            android:id="@+id/noStudentRB"
+                            android:text="@string/no"
+                            android:enabled="true"/>
+                    </RadioGroup>
+
+
+                  <!--  <FrameLayout
                         android:layout_width="0dp"
                         android:layout_height="45dp"
                         android:layout_weight="0.65">
@@ -511,9 +659,8 @@
                             android:paddingStart="@dimen/margin_10"
                             android:paddingTop="@dimen/margin_10"
                             android:text="Select"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/font_14" />
-                    </FrameLayout>
+                            style="@style/editTextView" />
+                    </FrameLayout>-->
 
                 </LinearLayout>
 
@@ -541,8 +688,7 @@
                         android:layout_weight="0.65"
                         android:maxLength="5"
                         android:paddingStart="@dimen/margin_10"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/font_14" />
+                        style="@style/editTextView" />
 
                 </LinearLayout>
 
@@ -617,7 +763,18 @@
 
             </LinearLayout>
 
+
+
         </android.support.v7.widget.CardView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <include layout="@layout/upload_document_layout"></include>
+        </LinearLayout>
+
+
 
         <include
             android:id="@+id/buttonLinearLayout"
