--- a/eazeWork/src/main/res/layout/remarks_item_layout.xml
+++ b/eazeWork/src/main/res/layout/remarks_item_layout.xml
@@ -10,7 +10,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:orientation="vertical"
-            android:padding="@dimen/margin_13">
+            android:padding="@dimen/margin_13"
+            android:background="@color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
