--- a/eazeWork/src/main/res/layout/login_fragment_container.xml
+++ b/eazeWork/src/main/res/layout/login_fragment_container.xml
@@ -119,7 +119,7 @@
             android:id="@+id/btn_gmail_sign_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_marginBottom="@dimen/margin_20"/>
 
         <TextView
