--- a/eazeWork/src/main/res/layout/history_list.xml
+++ b/eazeWork/src/main/res/layout/history_list.xml
@@ -2,7 +2,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:background="@android:color/white"
+    android:background="@color/fragment_bg"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
@@ -11,9 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:cacheColorHint="@android:color/transparent"
-        android:divider="@drawable/gradient_line"
-        android:dividerHeight="@dimen/tiny_gap_default"
         android:listSelector="@android:color/transparent"
         android:paddingLeft="@dimen/padding_default"
         android:paddingRight="@dimen/padding_default"  />
+
 </LinearLayout>
