--- a/eazeWork/src/main/res/layout/history_list_item.xml
+++ b/eazeWork/src/main/res/layout/history_list_item.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@android:color/white"
-    android:layout_marginTop="@dimen/margin_10"
-    android:layout_marginBottom="@dimen/margin_10"
-    android:layout_height="match_parent">
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_height="wrap_content">
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardViewExpense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/margin_22"
+        card_view:cardBackgroundColor="@color/white"
+        card_view:cardCornerRadius="2dp"
+        card_view:cardElevation="2dp"
+        card_view:cardUseCompatPadding="true">
+
+ <LinearLayout
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     android:background="@android:color/white"
+     android:layout_marginTop="@dimen/margin_10"
+     android:layout_marginBottom="@dimen/margin_10">
     <LinearLayout
         android:id="@+id/linearHistory"
         android:layout_weight="80"
@@ -119,5 +133,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             />
     </LinearLayout>
+ </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
