--- a/eazeWork/src/main/res/layout/store_list_item.xml
+++ b/eazeWork/src/main/res/layout/store_list_item.xml
@@ -2,12 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingLeft="@dimen/padding_mini"
-    android:paddingRight="@dimen/padding_mini"
-    android:paddingBottom="@dimen/padding_default"
-    android:paddingTop="@dimen/padding_default" >
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal">
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardViewExpense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/margin_22"
+        card_view:cardBackgroundColor="@color/white"
+        card_view:cardCornerRadius="2dp"
+        card_view:cardElevation="2dp"
+        card_view:cardUseCompatPadding="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/white"
+            android:paddingLeft="@dimen/padding_mini"
+            android:paddingRight="@dimen/padding_mini"
+            android:paddingBottom="@dimen/margin_5"
+            android:paddingTop="@dimen/margin_5">
 
     <LinearLayout
         android:id="@+id/ll_left_container"
@@ -81,5 +96,6 @@
         android:layout_height="20dp"
         android:layout_gravity="center_vertical"
         android:src="@drawable/img_arrow_down_gray_fwd" />
-
+</LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
