--- a/eazeWork/src/main/res/layout/team_list_item.xml
+++ b/eazeWork/src/main/res/layout/team_list_item.xml
@@ -2,18 +2,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    android:paddingLeft="@dimen/padding_mini"
-    android:paddingRight="@dimen/padding_mini"
-    android:paddingBottom="@dimen/margin_5"
-    android:paddingTop="@dimen/margin_5" >
+    >
 
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardViewExpense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/margin_22"
+        card_view:cardBackgroundColor="@color/white"
+        card_view:cardCornerRadius="2dp"
+        card_view:cardElevation="2dp"
+        card_view:cardUseCompatPadding="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/white"
+            android:paddingLeft="@dimen/padding_mini"
+            android:paddingRight="@dimen/padding_mini"
+            android:paddingBottom="@dimen/margin_5"
+            android:paddingTop="@dimen/margin_5">
     <ImageView
         android:id="@+id/img_icon"
         android:layout_width="@dimen/margin_60"
         android:layout_height="@dimen/margin_60"
         android:layout_gravity="center_vertical"
         android:src="@drawable/profile_image" />
+
     <hr.eazework.com.ui.util.custom.RoundedImageView
         android:id="@+id/img_icon_rounded"
         android:layout_width="@dimen/margin_60"
@@ -94,5 +112,6 @@
         android:layout_height="20dp"
         android:layout_gravity="center_vertical"
         android:src="@drawable/img_arrow_down_gray_fwd" />
-
+</LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
