--- a/eazeWork/src/main/res/layout/advance_approval_item.xml
+++ b/eazeWork/src/main/res/layout/advance_approval_item.xml
@@ -195,19 +195,21 @@
                         android:layout_weight="0.7"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
+                <Button
+                    android:layout_marginRight="5dp"
+                    style="@style/button"
+                    android:layout_gravity="right"
+                    android:layout_alignParentBottom="true"
+                    android:textSize="@dimen/font_12"
+                    android:layout_alignParentRight="true"
+                    android:id="@+id/actionBTN"
+                    android:background="@drawable/rounded_corner_light_blue"
+                    android:textColor="@color/white"
+                    android:text="@string/actionBTN"
+                    android:layout_width="@dimen/margin_70"
+                    android:layout_height="@dimen/margin_30" />
             </LinearLayout>
-            <Button
-                android:layout_marginRight="5dp"
-                style="@style/button"
-                android:layout_alignParentBottom="true"
-                android:textSize="@dimen/font_12"
-                android:layout_alignParentRight="true"
-                android:id="@+id/actionBTN"
-                android:background="@drawable/rounded_corner_light_blue"
-                android:textColor="@color/white"
-                android:text="@string/actionBTN"
-                android:layout_width="@dimen/margin_70"
-                android:layout_height="@dimen/margin_30" />
+
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
