--- a/eazeWork/src/main/res/layout/attendance_details_layout.xml
+++ b/eazeWork/src/main/res/layout/attendance_details_layout.xml
@@ -246,7 +246,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
-                                android:layout_marginRight="@dimen/padding_default"
+                                android:layout_marginRight="@dimen/margin_2"
                                 android:orientation="vertical">
 
                                 <TextView
@@ -373,7 +373,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_vertical"
-                                    android:layout_marginRight="@dimen/padding_default"
+                                    android:layout_marginRight="@dimen/margin_2"
                                     android:orientation="vertical">
 
                                     <TextView
