--- a/eazeWork/src/main/res/layout/fragment_outdoor_duty_request.xml
+++ b/eazeWork/src/main/res/layout/fragment_outdoor_duty_request.xml
@@ -153,7 +153,7 @@
                                         android:id="@+id/tv_from_day"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="From Date"
+                                        android:text="@string/date"
                                         android:textColor="@color/white"
                                         android:textSize="@dimen/margin_13" />
 
