--- a/eazeWork/src/main/res/layout/leave_approval_detail_layout.xml
+++ b/eazeWork/src/main/res/layout/leave_approval_detail_layout.xml
@@ -187,6 +187,20 @@
                         android:text="-"
                         android:textSize="@dimen/font_12" />
                 </LinearLayout>
+                <Button
+                    android:layout_gravity="right"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:id="@+id/approveBTN"
+                    style="@style/button"
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="@dimen/margin_70"
+                    android:layout_height="@dimen/margin_25"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="@dimen/margin_5"
+                    android:background="@drawable/rounded_corner_light_blue"
+                    android:text="@string/approve"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/font_12" />
             </LinearLayout>
 
             <ImageView
@@ -199,19 +213,7 @@
                 android:layout_gravity="center_vertical"
                 android:src="@drawable/squares_line" />
 
-            <Button
-                android:layout_marginTop="@dimen/margin_10"
-                android:id="@+id/approveBTN"
-                style="@style/button"
-                android:layout_alignParentBottom="true"
-                android:layout_width="@dimen/margin_70"
-                android:layout_height="@dimen/margin_25"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="@dimen/margin_5"
-                android:background="@drawable/rounded_corner_light_blue"
-                android:text="@string/approve"
-                android:textColor="@color/white"
-                android:textSize="@dimen/font_12" />
+
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
