--- a/eazeWork/src/main/res/layout/leave_balance_detail_root_container.xml
+++ b/eazeWork/src/main/res/layout/leave_balance_detail_root_container.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:id="@+id/view_advance_expense">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,6 +53,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_default"
                         android:text="@string/pendinfg_for_approval"
+                        android:visibility="gone"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/accent" />
 
@@ -86,6 +88,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_default"
                         android:text="@string/availed_leaves"
+                        android:visibility="gone"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/primary_green" />
 
@@ -95,6 +98,51 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical" >
                     </LinearLayout>
+
+                   <LinearLayout
+                       android:orientation="vertical"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content">
+
+                       <LinearLayout
+                           android:id="@+id/errorLinearLayout"
+                           style="@style/blueBorderEditText"
+                           android:layout_width="match_parent"
+                           android:layout_marginLeft="10dp"
+                           android:layout_marginRight="10dp"
+                           android:layout_marginTop="10dp"
+                           android:layout_height="wrap_content"
+                           android:visibility="gone"
+                           android:background="@color/white">
+
+                           <TextView
+                               android:layout_width="fill_parent"
+                               android:layout_height="wrap_content"
+                               android:gravity="center"
+                               android:padding="10dp"
+                               android:text="@string/expense_error_msg"
+                               android:textColor="@color/black"
+                               android:textSize="@dimen/font_14"
+                               android:visibility="visible" />
+                       </LinearLayout>
+
+                       <LinearLayout
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:orientation="vertical"
+                           android:layout_margin="@dimen/margin_10"
+                           >
+
+                           <android.support.v7.widget.RecyclerView
+                               android:layout_width="match_parent"
+                               android:layout_height="wrap_content"
+                               android:scrollbars="vertical"
+                               android:id="@+id/expenseApprovalRecyclerView">
+
+                           </android.support.v7.widget.RecyclerView>
+                       </LinearLayout>
+
+                   </LinearLayout>
                 </LinearLayout>
             </ScrollView>
 
