--- a/eazeWork/src/main/res/layout/login_fragment_container.xml
+++ b/eazeWork/src/main/res/layout/login_fragment_container.xml
@@ -117,10 +117,13 @@
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/btn_gmail_sign_in"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="visible"
-            android:layout_marginBottom="@dimen/margin_20"/>
+            android:layout_marginBottom="20dp"
+            android:layout_marginStart="@dimen/margin_20"
+            android:layout_marginEnd="@dimen/margin_20"
+            />
 
 
         <TextView
