--- a/eazeWork/src/main/res/layout/attendance_details_layout.xml
+++ b/eazeWork/src/main/res/layout/attendance_details_layout.xml
@@ -139,6 +139,61 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:padding="@dimen/margin_5"
+            android:id="@+id/markedTimeLl"
+            android:visibility="visible">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+               >
+
+                <TextView
+                    style="@style/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/marked_in_time"
+                    />
+
+                <TextView
+                    style="@style/textViewYellow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/markedInTimeTV"
+
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+               >
+
+                <TextView
+                    style="@style/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/marked_out_time"
+                    />
+
+                <TextView
+                    style="@style/textViewYellow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/markedOutTimeTV"
+
+                    />
+
+            </LinearLayout>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_margin="@dimen/margin_10">
 
             <LinearLayout
@@ -159,6 +214,7 @@
 
                         <TextView
                             style="@style/textView"
+                            android:id="@+id/inTimeTMTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/in_time"
@@ -289,6 +345,7 @@
 
                             <TextView
                                 style="@style/textView"
+                                android:id="@+id/outTimeTMTV"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/out_time"
