--- a/eazeWork/src/main/res/layout/ll_create_new_leave.xml
+++ b/eazeWork/src/main/res/layout/ll_create_new_leave.xml
@@ -41,7 +41,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/margin_default"
-                    android:text="Request For"
+                    android:text="@string/employee_name"
                     android:textColor="@color/black"/>
                 <TextView
                     android:layout_marginLeft="@dimen/margin_default"
@@ -51,7 +51,6 @@
                     android:id="@+id/empNameTV"
                     android:layout_width="match_parent"
                     android:padding="@dimen/margin_10"
-                    android:text="aaa"
                     android:textSize="@dimen/margin_14"
                     android:layout_height="wrap_content" />
             </LinearLayout>
@@ -209,7 +208,7 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="@dimen/padding_default"
                     android:paddingTop="@dimen/padding_default"
-                    android:text="From Date"
+                    android:text="@string/start_date"
                     android:textColor="@color/black"/>
 
                 <LinearLayout
@@ -240,7 +239,7 @@
                             android:id="@+id/tv_from_day"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="From Date"
+                            android:text="@string/start_date"
                             android:textSize="@dimen/margin_12"
                             android:textColor="@color/white"/>
 
@@ -274,7 +273,7 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="@dimen/padding_default"
                     android:paddingTop="@dimen/padding_default"
-                    android:text="To Date"
+                    android:text="@string/end_date"
                     android:textColor="@color/black"/>
 
                 <LinearLayout
@@ -308,7 +307,7 @@
                             android:ellipsize="end"
                             android:singleLine="true"
                             android:textSize="@dimen/margin_12"
-                            android:text="To Date"
+                            android:text="@string/end_date"
                             android:textColor="@color/white"/>
 
                         <TextView
@@ -348,7 +347,133 @@
         </TextView>
         </LinearLayout>
 
+
+        <LinearLayout
+            android:id="@+id/rg_leave_time_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="@dimen/padding_default"
+            android:visibility="visible">
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/padding_mini">
+
+                <CheckBox
+                    android:id="@+id/rb_25_day"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:button="@drawable/checkbox_selector"
+                    android:paddingLeft="@dimen/padding_mini"
+                    android:text="Qtr Day"
+                    android:visibility="visible"/>
+
+                <CheckBox
+                    android:id="@+id/rb_half_day"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_gravity="right|end"
+                    android:layout_marginLeft="@dimen/padding_mini"
+                    android:button="@drawable/checkbox_selector"
+                    android:paddingLeft="@dimen/padding_mini"
+                    android:text="Half Day"
+                    android:visibility="visible"/>
+
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+                <CheckBox
+                    android:id="@+id/rb_75_day"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/padding_default"
+                    android:layout_marginLeft="@dimen/padding_mini"
+                    android:button="@drawable/checkbox_selector"
+                    android:paddingLeft="@dimen/padding_mini"
+                    android:text="0.75 Day"
+                    android:visibility="visible"/>
+
+                <CheckBox
+                    android:id="@+id/rb_full_day"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="@dimen/padding_default"
+                    android:button="@drawable/checkbox_selector"
+                    android:checked="true"
+                    android:layout_marginLeft="@dimen/padding_mini"
+                    android:layout_gravity="right|end"
+                    android:paddingLeft="@dimen/padding_mini"
+                    android:text="Full Day"
+                    android:visibility="visible"/>
+
+            </RelativeLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:id="@+id/halfLl"
+            >
+
+            <TextView
+                android:id="@+id/selectTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_default"
+                android:text="Select"
+                android:textColor="@color/black"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/padding_default">
+
+                <CheckBox
+                    android:id="@+id/firstHalfCB"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/padding_default"
+                    android:button="@drawable/checkbox_selector"
+                    android:paddingLeft="@dimen/padding_mini"
+                    android:text="First Half"
+                    android:checked="true"
+                    android:visibility="visible"/>
+
+                <CheckBox
+                    android:id="@+id/secondHalfCB"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="@dimen/padding_mini"
+                    android:layout_marginTop="@dimen/padding_default"
+                    android:button="@drawable/checkbox_selector"
+                    android:paddingLeft="@dimen/padding_mini"
+                    android:text="Second Half"
+                    android:paddingRight="@dimen/padding_default"
+                    android:visibility="visible"/>
+            </RelativeLayout>
+
+        </LinearLayout>
+
         <TextView
+            android:layout_marginTop="@dimen/margin_10"
             android:id="@+id/tv_remark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -363,78 +488,12 @@
             android:layout_margin="10dp"
             android:background="@drawable/focus_style_gray"
             android:ems="10"
+            android:text=""
             android:padding="@dimen/margin_default"
             android:textColor="@color/black">
 
             <requestFocus/>
         </EditText>
-
-        <LinearLayout
-            android:id="@+id/rg_leave_time_type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/padding_default"
-            android:visibility="gone">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:id="@+id/rb_full_day"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/padding_mini"
-                    android:button="@drawable/checkbox_selector"
-                    android:checked="true"
-                    android:paddingLeft="@dimen/padding_mini"
-                    android:text="Full Day"
-                    android:visibility="visible"/>
-
-                <CheckBox
-                    android:id="@+id/rb_half_day"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_gravity="right|end"
-                    android:layout_marginLeft="@dimen/padding_mini"
-                    android:button="@drawable/checkbox_selector"
-                    android:paddingLeft="@dimen/padding_mini"
-                    android:text="Half Day"
-                    android:visibility="visible"/>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingLeft="@dimen/padding_mini">
-
-                <CheckBox
-                    android:id="@+id/rb_25_day"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/padding_default"
-                    android:button="@drawable/checkbox_selector"
-                    android:paddingLeft="@dimen/padding_mini"
-                    android:text="0.25 Day"
-                    android:visibility="visible"/>
-
-                <CheckBox
-                    android:id="@+id/rb_75_day"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginLeft="@dimen/padding_mini"
-                    android:layout_marginTop="@dimen/padding_default"
-                    android:button="@drawable/checkbox_selector"
-                    android:paddingLeft="@dimen/padding_mini"
-                    android:text="0.75 Day"
-                    android:visibility="visible"/>
-            </RelativeLayout>
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
