--- a/eazeWork/src/main/res/layout/square_date_cell.xml
+++ b/eazeWork/src/main/res/layout/square_date_cell.xml
@@ -3,6 +3,7 @@
      android:layout_width="match_parent"
     android:layout_height="match_parent">
 <hr.calender.caldroid.SquareTextView
+
     android:id="@+id/calendar_tv"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,9 +12,11 @@
     android:layout_width="match_parent"
     android:layout_height="2dp"
     android:background="#ff2400"
+    android:visibility="gone"
     android:layout_gravity="bottom"/>
 
 <TextView
+    android:visibility="gone"
     android:id="@+id/tv_date_status"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
