--- a/eazeWork/src/main/res/values/styles.xml
+++ b/eazeWork/src/main/res/values/styles.xml
@@ -116,6 +116,14 @@
 
     </style>
 
+    <style name="textViewHoliday">
+        <item name="android:padding">2dip</item>
+        <item name="android:textSize">@dimen/font_12</item>
+        <item name="android:layout_marginLeft">@dimen/margin_10</item>
+        <item name="android:textColor">@color/black</item>
+
+    </style>
+
     <style name="editTextView">
         <item name="android:textSize">@dimen/font_14</item>
         <item name="android:textColor">@color/black</item>
