--- a/eazeWork/src/main/res/layout/attandance_detail_root_container.xml
+++ b/eazeWork/src/main/res/layout/attandance_detail_root_container.xml
@@ -166,8 +166,12 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_marginTop="@dimen/margin_5">
-
+                            <TextView
+                                android:id="@+id/text"
+                                android:layout_width="wrap_content"
+                                android:layout_height="@dimen/margin_10" />
                             <Button
+                                android:layout_below="@+id/text"
                                 android:id="@+id/markAttendanceBTN"
                                 style="@style/button"
                                 android:layout_width="@dimen/margin_82"
@@ -182,6 +186,7 @@
                                 android:visibility="gone" />
 
                             <Button
+                                android:layout_below="@+id/text"
                                 android:id="@+id/timeModificationBTN"
                                 style="@style/button"
                                 android:layout_width="@dimen/margin_82"
